<resources>
    <string name="app_name">Fillit-tionary</string>
    <string name="editar">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="añadir">Add</string>
    <string name="palabra">Word</string>
    <string name="traduccion">Translation</string>
    <string name="nota">Note</string>
    <string name="editPalabra">Your word</string>
    <string name="hintPalabra">Write it here</string>
    <string name="editTraduccion">Your translation</string>
    <string name="hintTraduccion">Write your translation here</string>
    <string name="editTipo">Extra info</string>
    <string name="hintTipo">Kind of word, gender, etc</string>
    <string name="editNotas">Notes, examples, ideas</string>
    <string name="hintNotas">Write it here</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="mainactivity">Fillit-tionary</string>
    <string name="closerlookactivity">Fillit-tionary</string>
    <string name="closerlook">Fillit-tionary</string>
    <string name="editactivity">Edit</string>
    <string name="toastMsg">Word not found</string>
    <string name="buscarPal">Searching a word</string>
    <string name="buscarHint">Type it here</string>
    <string name="nombre">Noun</string>
    <string name="editIdioma">Language</string>
    <string name="hintidioma">Write here the language</string>
    <string name="indicaciones1">Touch the words to get a closer look.</string>
    <string name="dbguardada">Database saved in the folder Fillit_tionary</string>
    <string name="traducción">Translation</string>
    <string name="tipo">Type</string>
    <string name="buscar">Search</string>
    <string name="anadir">Add</string>
    <string name="guardar">Export</string>
    <string name="idioma">Language</string>
    <string name="idiomas">Languages</string>
    <string name="ordenar">Sort</string>
    <string name="borrar">Delete</string>
    <string name="compartir">Share</string>
    <string name="comparto_1">I\'ve just learned a new word! It\'s </string>
    <string name="comparto_2">Now it\'s in my Fillit-tionary. I will never forget it!</string>
    <string name="compartir_con">Share via</string>
    <string name="importar">Import</string>
    <string name="mensajeImport">Write the name of the DB</string>
    <string name="ayuda">Help</string>
    <string name="errorImport">File not found. Check the DB name!</string>
    <string name="enviar">Email it</string>
    <string name="exitoImport">Words imported successfully</string>
    <string name="dbInvalida">Error: some words could not be imported.</string>
    <string name="exportarMensaje">How will you call your file?</string>
    <string name="enviar_con">Send via...</string>
    <string name="helpAdd">Add: add a new word to your dictionary</string>
    <string name="helpSearch">Search: look for the word you want to see. You can write either the original word or the translation</string>
    <string name="helpExport">Export: save your list of words so that you never lose your work. It\'s saved in the app\'s folder in your SD card , Fillit_tionary.</string>
    <string name="helpImport">Import: you can add lists of words contained in a .csv file. This way you can import your previous lists of words, some friend\'s lists, or what you have been previously working in from your computer. Just make sure you keep that file in the app\'s folder in your SD card, and that it is four columns wide.</string>
    <string name="helpSort">Sort: sort your list of words according to the first field in each entry, the field Type. After sorting the list will come back to its original order.</string>
    <string name="helpSend">Send: send your whole list of words in an email. To your friends, or to yourself. Fast way to also have it in your computer or other devices.</string>
    <string name="helpEdit">Edit: edit the words you have previously added.</string>
    <string name="helpDelete">Delete: erase a word.</string>
    <string name="helpShare">Share: you can share a word in social networks, apps for chating, or wherever you want. Tell the world you are working hard to learn a new language. Share with your friends the new words you learn. Ask for ideas, examples or explanations.</string>
    <string name="sinIdioma">Undefined</string>
    <string name="añadirIdioma">Add language</string>
    <string name="pre_text">Now you have a list of words for each language you\'re studying, and it appears right when you start the app. You only have to push the language to enter the list of words in that language.

    In order to add a new language you have to add a new word, and write the language it belongs to in the right field. From that moment on that language will appear with the others and you\'ll only have to fill it with words!.</string>
    <string name="pre_text_view">NEW FEATURE!!</string>
    <string name="empezarQuiz">Are you ready for the quiz?</string>
    <string name="listo">Ready!</string>
    <string name="todaviaNo">Not yet</string>
    <string name="resultados">Results</string>
    <string name="fraseResultados">The results of your quiz in</string>
    <string name="fraseResultados2">are</string>
    <string name="quizzHint">Write your answer here</string>
    <string name="botonQuiz">GO!</string>
    <string name="repetirQuiz">Do you want to take the quiz again?</string>
    <string name="preguntaResults">Do you want to see all your results?</string>
    <string name="acierto">Well done!</string>
    <string name="error">Error!</string>
    <string name="quizz">Quiz!</string>
    <string name="numeroPreguntas">How many words do you want to guess?</string>
    <string name="enterLang">Enter the new language</string>
    <string name="soloNumeros">Only numbers accepted</string>
    <string name="demasiadasPreg">Write a number between 1 and</string>
    <string name="necesitasPista">Do you need a hint?</string>
    <string name="siPista">I do!</string>
    <string name="compartirResultados1">I just took a quiz with #Fillit-tionary in</string>
    <string name="compartirResultados2">and my result was</string>
    <string name="repetir">Repeat</string>
    <string name="claro">Sure!</string>
    <string name="nuevoIdioma">New language created: </string>
    <string name="quitarFoto">The picture has been removed</string>
    <string name="grabando_audio">Recording. Push stop to finish.</string>
    <string name="grabacion_parada">Audio recorded</string>
    <string name="reproduccion_interrumpida">Playback stopped.</string>
    <string name="reproduciendo_sonido">Playing audio</string>
    <string name="helpQuiz">Take a quiz to check how many of the words in your list you remenber. If the list is bigger than 10 words you can chose how many of them you want to be asked. If you want you can ask for a clue, and you\'ll see the extra information you added to your word. Later, in the results page, you\'ll see how you made it, and you can check which words you failed.</string>
    <string name="helpRecod">Record and play the pronunciation of the words you write on your list.</string>
    <string name="sonidoEliminado">Audio deleted</string>
    <string name="sonido">Sound</string>
    <string name="sonidoInvalido">Impossible to play audio</string>
    <string name="errorTamañoDB">Error in the DB</string>
    <string name="idiomaVacio">You have to write the language\'s name</string>
    <string name="avisoDeCorrupcion">One of the words had no language. It\'s been erased.</string>
    <string name="no_record_allowed">You must allow permission record audio to your mobile device.</string>
    <string name="funcion_desactivada">Temporarily out of order</string>

</resources>