<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/help_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayuda"
            android:textSize="25dp"
            android:paddingLeft="35dp"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pre_text"
                android:textSize="17dp"
                android:text="@string/pre_text"
                android:paddingTop="7dp"
                android:paddingLeft="40dp"
                android:paddingRight="17dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/help_add_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_add" />
            <TextView
                android:id="@+id/help_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpAdd"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/search_help_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_search" />
            <TextView
                android:id="@+id/search_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpSearch"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/search_export_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_save" />
            <TextView
                android:id="@+id/search_export_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpExport"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/search_import_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_upload" />
            <TextView
                android:id="@+id/search_import_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpImport"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/search_sort_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_sort_alphabetically" />
            <TextView
                android:id="@+id/search_sort_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpSort"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/search_send_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_send" />
            <TextView
                android:id="@+id/search_send_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpSend"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/search_edit_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_edit" />
            <TextView
                android:id="@+id/search_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpEdit"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/search_delete_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_delete" />
            <TextView
                android:id="@+id/search_delete_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpDelete"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/search_share_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_share" />
            <TextView
                android:id="@+id/search_share_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpShare"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/search_quiz_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_star_big_on" />
            <TextView
                android:id="@+id/search_quiz_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpQuiz"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingBottom="7dp"
            android:paddingRight="15dp"
            android:paddingTop="7dp">

            <ImageView
                android:id="@+id/search_record_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_notification_overlay" />
            <TextView
                android:id="@+id/search_record_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/helpRecod"
                android:paddingLeft="20dp"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>